--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
  Theme Name:   Twenty Twenty Child
  Theme URI:    http://example.com/twenty-twenty-child/
- Description:  Twenty Twenty Child Theme
+ Description:  Twenty Twenty Child is a wordpress rest api customization theme.it is create for wordpress with react project develop and wordpress rest api customization.
  Author:       Golam Robbani
  Author URI:   http://example.com
  Template:     twentytwenty
