refactoring style.css

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
  Theme Name:   Twenty Twenty Child
- Theme URI:    http://example.com/twenty-twenty-child/
+ Theme URI:    http://robbani.me/twenty-twenty-child/
  Description:  Twenty Twenty Child is a wordpress rest api customization theme.it is create for wordpress with react project develop and wordpress rest api customization.
  Author:       Golam Robbani
- Author URI:   http://example.com
+ Author URI:   http://robbani.me
  Template:     twentytwenty
  Version:      1.0.0
  License:      GNU General Public License v2 or later
